[tool.poetry]
name = "replica"
version = "0.1.0"
description = ""
authors = ["Elliott Skomski <skomsks@wwu.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
pyo = "^1.0"
pyotools = { git = "https://github.com/belangeo/pyo-tools.git", branch = "master" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
